--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "parse-spell": "node scripts/parseSpell.js"
   },
   "dependencies": {
     "html2pdf.js": "^0.14.0",
